# 0the

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  OTHELLO_RULES  README.md  build.rs  comp_run.bat
othe/: Cargo.toml
othe/src/: lib.rs
src/: lib.rs  main.cpp  main.rs  player.rs  style.rs
zerothe/: Cargo.toml
zerothe/src/: main.rs
