[package]
name = "othe"
description = "Othello library"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
termcolor.workspace = true
